--- a/css/styles.css
+++ b/css/styles.css
@@ -839,6 +839,9 @@ body {
     border: none;
 }
 
+ input:invalid:not(:placeholder-shown) +.modal-icons {
+    fill: red ;
+ }
 
 /* ---------MODAL MENU----------- */
 
